--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,109 @@ settings.py
 __pycache__/
 venv/
 migrations/
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.pytest_cache/
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Django stuff:
+*.log
+*.pot
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.env
+
+# If your build process includes any compiled Python files
+*.compiled.py
+
+# Django migrations
+*/migrations/__pycache__/
+*/migrations/*.pyc
+*/migrations/*.pyo
+*/migrations/*.pyd
+
+# Django static files
+staticfiles/
+static/
+static_root/
+
+# Media files
+media/
+
+# Local configuration files
+local_settings.py
+
+# Security
+.env
+
+# macOS specific files
+.DS_Store
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*~
+
+# Python egg files
+*.egg
+*.egg-info/
+.installed.cfg
+*.egg-info/
+
+# Coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+coverage.xml
+*.cover
+.hypothesis/
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+
+# mypy
+.mypy_cache/
+
+# Flask specific files
+instance/
+.webassets-cache
+
+# Scrapy specific files
+.scrapy
+
+# Sphinx documentation
+docs/_build/
